<resources>
    <string name="app_name">Property Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="more_details_about_the_property_listed">More details about the property listed</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="property_title">Property title</string>
    <string name="location_of_the_property">Location of the property</string>
    <string name="description_of_the_property">Description of the property</string>
    <string name="status_of_the_property">Status_of_the_property</string>
    <string name="status">status</string>
    <string name="description">description</string>
    <string name="price">Price</string>
</resources>