<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginTop="5dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/whiteTextColor"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/propertyimage"
            android:layout_width="match_parent"
            android:layout_height="222dp"
            android:scaleType="centerCrop"
            android:src="@drawable/waffles" />
    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/lightPrimary"
        android:layout_marginBottom="10dp"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/propertyPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/propertyDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/textPrimaryColor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/propertyLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_of_the_property"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/propertyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/property_title"
            android:textColor="@color/textPrimaryColor"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>