<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PropertyDetailFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dividerColor">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:id="@+id/propertyimage"
            android:src="@drawable/waffles"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/propertyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="Property Name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/propertyLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/location_of_the_property"
                android:layout_below="@+id/propertyName"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="italic" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingRight="30dp">


                <TextView
                    android:id="@+id/propertyStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="52dp"
                    android:layout_marginRight="52dp"
                    android:layout_marginBottom="3dp"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="@string/status"
                    android:textColor="@color/textPrimaryColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/propertyPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Price of property"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/propertyDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="@string/description_of_the_property"
                    android:textColor="@color/textPrimaryColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/propertyPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_baseline_call_24"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="(503) 223-1282"
                    android:textColor="@color/iconColorText"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
